insert the logo in svg on the homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <section class="content">
+        <img class="logo-ia" src="public/logo-ia.svg" alt="logo-ia">
         <div class="contacts">
             <h1>Content Form</h1>
             <form method="POST" action="/src/connected.php">
