--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="contacts">
             <h1>Content Form</h1>
             <form method="POST" action="/src/connected.php">
-                <input class="field" name="Name" type="text" placeholder="Name">
+                <input class="field" name="name" type="text" placeholder="Name">
                 <input class="field" name="email" type="email" placeholder="Email"> 
                 <input class="input-date" name="birth_date" type="date">
                 <input class="field" type="submit" value="Send">
